tests/diagnostics/declarations/types/enum_duplicate_variant/expect.txt
# exit: 1
lib.coppice:3:5: error: duplicate enum variant 'North'
      North,
      ^
